[gd_scene load_steps=10 format=3 uid="uid://cvkb1x812fw1"]

[ext_resource type="Script" path="res://Scripts/GManager.gd" id="1_r0itm"]
[ext_resource type="Texture2D" uid="uid://cm37yu845tegl" path="res://icon.svg" id="1_tcyj8"]
[ext_resource type="PackedScene" path="res://Buttons/Home.tscn" id="2_ioppx"]
[ext_resource type="PackedScene" path="res://Buttons/Search.tscn" id="3_yjfik"]
[ext_resource type="PackedScene" uid="uid://bd0yce1amgaex" path="res://Buttons/by_album.tscn" id="4_8m7sh"]
[ext_resource type="PackedScene" path="res://Buttons/by_artist.tscn" id="5_ttrgm"]
[ext_resource type="PackedScene" path="res://Buttons/by_group.tscn" id="6_4n37k"]
[ext_resource type="PackedScene" path="res://Buttons/by_song.tscn" id="7_tk23s"]
[ext_resource type="AudioStream" uid="uid://balgpw1n0yn47" path="res://TestSongs/allthat.ogg" id="9_4dx5t"]

[node name="Song Selection Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r0itm")

[node name="Menu" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBC_Top" type="HBoxContainer" parent="Menu"]
offset_right = 1920.0
offset_bottom = 160.0

[node name="TR - Logo" type="TextureRect" parent="Menu/HBC_Top"]
custom_minimum_size = Vector2i(160, 160)
offset_right = 160.0
offset_bottom = 160.0
texture = ExtResource("1_tcyj8")
stretch_mode = 3

[node name="Label" type="Label" parent="Menu/HBC_Top"]
offset_left = 164.0
offset_right = 375.0
offset_bottom = 160.0
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0.32549, 0.827451, 1)
theme_override_constants/shadow_offset_y = 5
theme_override_font_sizes/font_size = 62
text = "SONGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Home" parent="Menu/HBC_Top" instance=ExtResource("2_ioppx")]
custom_minimum_size = Vector2i(90, 15)
offset_left = 379.0
offset_right = 469.0
offset_bottom = 160.0

[node name="Search" parent="Menu/HBC_Top" instance=ExtResource("3_yjfik")]
custom_minimum_size = Vector2i(90, 15)
offset_left = 473.0
offset_right = 563.0
offset_bottom = 160.0

[node name="VBC - Sorter" type="VBoxContainer" parent="Menu/HBC_Top"]
offset_left = 567.0
offset_right = 1920.0
offset_bottom = 160.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="Menu/HBC_Top/VBC - Sorter"]
offset_right = 1353.0
offset_bottom = 78.0
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0.32549, 0.827451, 1)
theme_override_constants/shadow_offset_y = 5
theme_override_font_sizes/font_size = 48
text = "Sort by:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBC - Buttons" type="HBoxContainer" parent="Menu/HBC_Top/VBC - Sorter"]
offset_top = 82.0
offset_right = 1353.0
offset_bottom = 160.0
size_flags_vertical = 3
alignment = 1

[node name="by_album" parent="Menu/HBC_Top/VBC - Sorter/HBC - Buttons" instance=ExtResource("4_8m7sh")]
custom_minimum_size = Vector2i(280, 15)
offset_left = 110.0
offset_right = 390.0
offset_bottom = 78.0

[node name="by_Artist" parent="Menu/HBC_Top/VBC - Sorter/HBC - Buttons" instance=ExtResource("5_ttrgm")]
custom_minimum_size = Vector2i(280, 15)
offset_left = 394.0
offset_right = 674.0
offset_bottom = 78.0

[node name="by_group" parent="Menu/HBC_Top/VBC - Sorter/HBC - Buttons" instance=ExtResource("6_4n37k")]
custom_minimum_size = Vector2i(280, 15)
offset_left = 678.0
offset_right = 958.0
offset_bottom = 78.0

[node name="by_song" parent="Menu/HBC_Top/VBC - Sorter/HBC - Buttons" instance=ExtResource("7_tk23s")]
custom_minimum_size = Vector2i(280, 15)
offset_left = 962.0
offset_right = 1242.0
offset_bottom = 78.0

[node name="HBC_Divider" type="HBoxContainer" parent="Menu"]
offset_top = 164.0
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_vertical = 3

[node name="VBC_SongInfo" type="VBoxContainer" parent="Menu/HBC_Divider"]
offset_right = 958.0
offset_bottom = 916.0
size_flags_horizontal = 3
alignment = 1

[node name="VBC_Sorter" type="VBoxContainer" parent="Menu/HBC_Divider/VBC_SongInfo"]
offset_right = 958.0
offset_bottom = 916.0

[node name="TR_AlbumImg" type="TextureRect" parent="Menu/HBC_Divider/VBC_SongInfo/VBC_Sorter"]
custom_minimum_size = Vector2i(0, 600)
offset_right = 958.0
offset_bottom = 600.0
size_flags_vertical = 3
texture = ExtResource("1_tcyj8")
stretch_mode = 3

[node name="Label" type="Label" parent="Menu/HBC_Divider/VBC_SongInfo/VBC_Sorter"]
offset_top = 604.0
offset_right = 958.0
offset_bottom = 916.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
text = "Text










Test"

[node name="ScrollContainer" type="ScrollContainer" parent="Menu/HBC_Divider"]
offset_left = 962.0
offset_right = 1920.0
offset_bottom = 916.0
size_flags_horizontal = 3

[node name="VBC_Buttons" type="VBoxContainer" parent="Menu/HBC_Divider/ScrollContainer"]
offset_right = 958.0
size_flags_horizontal = 3
tooltip_text = "Buttons for the songs"
theme_override_constants/separation = 10
alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_4dx5t")
volume_db = -16.774
